# xlayer-jobs

./: .env.example  .gitignore  README.md  pyproject.toml  supabase_add_wallet.sql  supabase_setup.sql
tests/: test_api.py  test_db.py
xlayerjobs/: api.py  config.py  crawler.py  db.py  discovery.py  onchain_check.py
xlayerjobs/dashboard/: app.py
xlayerjobs/dashboard/templates/: base.html  index.html
