[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlayer-jobs"
version = "0.1.0"
description = "Agent job board on X Layer with escrow payments"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["xlayerjobs"]
